--- a/public/views/products/singleProduct.html
+++ b/public/views/products/singleProduct.html
@@ -22,10 +22,10 @@
         </div>
         <color-circle-dir></color-circle-dir>
       </div>
-      <div class="size-selector" ng-show="data.packsize">
+      <!-- <div class="size-selector" ng-show="data.packsize">
         <span>PACK SIZE</span>
         <size-dir></size-dir>
-      </div>
+      </div> -->
       <div class="quantity-selector" ng-show="data.quantity">
         <span>quantity</span>
         <quantity-dir quantity="quantity" add-quantity="addQuantity()" minus-quantity="minusQuantity()"></quantity-dir>
