--- a/public/views/profile/history.html
+++ b/public/views/profile/history.html
@@ -6,9 +6,51 @@
       <li><a ng-click="signOut()" ui-sref="home">sign out</a></li>
     </ul>
   </nav>
-  <h2>order history</h2>
+  <!-- <h2>order history</h2>
   <div class="history-container">
 
     <a>shop harry's</a>
+  </div> -->
+</div>
+<div class="cart-container">
+<section class="cart-header">
+  <h2>your order history</h2>
+</section>
+
+<section class="cart-main">
+  <div class="cart-title">
+    <ul>
+      <li>item</li>
+      <li>unit price</li>
+      <li>quantity</li>
+      <li>product total</li>
+    </ul>
   </div>
+  <div class="cart-detail">
+    <div class="cart-product" ng-repeat="product in cart track by $index">
+      <ul>
+        <li><img ng-src="{{product.img_url}}" alt="img_url"></li>
+        <li>{{product.name}}</li>
+        <li>${{product.price}}</li>
+        <li>
+          <quantity-dir quantity="product.quantity" add-quantity="addQuantity(product.img_url)" minus-quantity="minusQuantity(product.img_url, product.quantity)"></quantity-dir>
+        </li>
+        <li>
+          ${{product.purchase_date}}
+          <a ng-click="removeQuantity(product.img_url, product.quantity)" class="remove">x</a>
+        </li>
+      </ul>
+      <div>
+        <div class="product-img-url"><img ng-src="{{product.img_url}}" alt="img_url"></div>
+        <ul>
+          <li>{{product.name}}</li>
+          <li>${{product.price}} x {{product.quantity}}</li>
+          <li>
+            ${{product.purchase_date}}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 </div>
