finish mobile responsive fixed sign up finish order history view

--- a/public/media.scss
+++ b/public/media.scss
@@ -1,3 +1,11 @@
+@media screen and (max-width: 1400px) {
+  .made-factory-container {
+    background: url("https://s3.amazonaws.com/harrypics/products/products/c45edac66ccad6bbd9551bf07cc626b58961b35f.jpg") no-repeat 600px;
+    background-size: contain;
+    background-color: #C4CDD0;
+  }
+}
+
 @media screen and (max-width: 1100px) {
   .infoLess1100 {
     display: none;
@@ -14,6 +22,8 @@
       padding: 0 10px;
     }
   }
+
+
 }
 
 @media screen and (max-width: 960px) {
@@ -113,6 +123,53 @@
 }
 
 @media screen and (max-width: 780px) {
+  .shaveplan-main {
+    background: url("https://s3.amazonaws.com/harrypics/products/products/trial-hero-large-gen2.jpg") no-repeat -80px 270px;
+    background-size: 200%;
+    background-color: rgb(239, 239, 239);
+    padding: 50px 0 100% 0;
+  }
+
+  // .descriptions {
+  //   margin: 0 80px;
+  // }
+
+  .card-container {
+    display: block;
+  }
+
+  .works-card {
+    width: 80%;
+    padding: 50px 20px;
+    margin: 20px auto;
+  }
+
+  .engineer {
+    background: url("https://s3.amazonaws.com/harrypics/products/products/78ef8c660810dd189d07303861e0927f9c734caf.jpg") no-repeat center top;
+    background-size: 200%;
+    padding: 90% 0 0 0;
+  }
+
+  .quality-container {
+    background: url("https://s3.amazonaws.com/harrypics/products/products/67fdc9d95116cfcc35c341114d8deeb374f13b64.jpg") no-repeat center -100px;
+    background-size: contain;
+    padding: 80% 0 0 0;
+    width: auto;
+
+    h2 {
+      margin-left: 50px;
+    }
+    p {
+      margin-left: 50px;
+    }
+  }
+
+  .made-factory-container {
+    background: url("https://s3.amazonaws.com/harrypics/products/products/c45edac66ccad6bbd9551bf07cc626b58961b35f.jpg") no-repeat center top;
+    background-size: contain;
+    background-color: #C4CDD0;
+    padding: 90% 0 0 0;
+  }
   .second-hero {
     display: block;
 
@@ -265,7 +322,44 @@
     margin: 0 1px;
   }
 
+  .product-info .big-pics > img {
+    height: 85%;
+  }
+
   .gel-or-cream-text {
     width: 200px;
+  }
+
+  .shaveplan-main > p {
+    width: 280px;
+  }
+
+  .quality-container {
+    h2, p {
+      margin: auto;
+    }
+  }
+
+  .descriptions {
+    margin: -110px 20px 0 20px;
+    padding: 30px;
+  }
+
+  .made-factory-container {
+    h2, p {
+      margin: auto;
+      width: 280px;
+    }
+  }
+
+  .works-card > img {
+    width: 90%;
+  }
+
+  .cart-container {
+    margin: 0 20px;
+  }
+  .cart-detail .cart-product > div ul {
+    margin-left: 20px;
   }
 }
