--- a/public/views/signIn/signIn.html
+++ b/public/views/signIn/signIn.html
@@ -16,7 +16,7 @@
       </div>
       <input type="password" ng-model="registerPassword" placeholder="Create Password" required>
       <p>Minimum 8 characters</p>
-      <input type="submit" value="create account" ng-click="register()">
+      <input type="submit" value="create account">
       <a href="/auth/facebook/callback">Sign in with Facebook</a>
     </form>
   </div>
