--- a/public/views/review/review.scss
+++ b/public/views/review/review.scss
@@ -26,11 +26,17 @@
     margin: auto;
     list-style-type: none;
     border-bottom: 1px solid rgba(191,191,191,0.5);
+    align-items: center;
 
     li {
       flex: 1;
       padding: 30px 0;
       text-align: right;
+    }
+
+    li > img {
+      height: 130px;
+      width: 130px;
     }
 
     li:first-child {
