fixed tele input

--- a/public/views/shipping/shipping.html
+++ b/public/views/shipping/shipping.html
@@ -83,7 +83,7 @@
       </select>
       <input type="text" placeholder="Zip Code" required ng-model="shipping.zipcode">
       </div>
-      <div><input type="text" placeholder="Telephone(Optional) ng-model="shipping.tele""></div>
+      <div><input type="text" placeholder="Telephone(Optional)" ng-model="shipping.tele"></div>
       <input type="submit" value="CONTINUE TO PAYMENT">
     </form>
     <div class="summary">
